CCLE-8384 - Fixed header drop downs cutoff in mobile view for both Need help and Usermenu.

--- a/theme/uclashared/scss/header.scss
+++ b/theme/uclashared/scss/header.scss
@@ -410,4 +410,6 @@ a.btn-help-feedback {
 // Removes extra spacing at top and bottom of Need help and User menu.
 .dropdown-menu {
     padding: 0px;
+    left: auto;
+    right: 0;
 }
